// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: snapshot tests should render correctly in primary variant 1`] = `
<div
  className="buttonWrapper"
>
  <button
    className="button-component primary"
  />
</div>
`;

exports[`Button: snapshot tests should render correctly in secundary variant 1`] = `
<div
  className="buttonWrapper"
>
  <button
    className="button-component secundary"
  />
</div>
`;
